--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 		<title>Indecision App</title>
 	</head>
 	<body>
+        <div id="app"></div>
 		<script
 			crossorigin
 			src="https://unpkg.com/react@16/umd/react.development.js"
